<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePhotoActivity"
    android:background="#f5f5f5"
    >

    <include
        android:id="@+id/include_logo"
        layout="@layout/page_upper_icon"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/include_logo">

        <TextView

            android:layout_width="fill_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_select_photo"

            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </TextView>

    </LinearLayout>

    <TableLayout
        android:id="@+id/contentWrapperProfileExt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight=".8"
        app:layout_constraintTop_toBottomOf="@+id/info_area"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_ok_nok_container">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:background="@drawable/pf_imagebt_rounded_corner"
            android:padding="2dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="40dp"
            >

            <RelativeLayout
                android:id="@+id/imageTextSection"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                >

                <ImageButton
                    android:id="@+id/profileImageViewButton"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/profile_icon_test"
                    android:padding="8dp"
                    android:background="@drawable/pf_imagebt_rounded_corner"/>

                <!-- <ImageButton
                    android:id="@+id/profileImagePhotoIcon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="4dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_alignParentRight="true"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/db_photograph_icon"
                    /> -->

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout_ok_nok_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/photo_nok_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".5"
            android:adjustViewBounds="true"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/profile_add_photo"
            android:scaleType="fitCenter"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/photo_ok_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".5"
            android:adjustViewBounds="true"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/profile_name_activity_button_ok"
            android:scaleType="fitCenter"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="#000000" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>